# akkad

./: .editorconfig  .travis.yml  Cargo.toml  readme.md
.github/workflows/: ci.yml
akkad-net/: Cargo.toml
akkad-net/src/: lib.rs
akkad-rt/: Cargo.toml
akkad-rt/src/: lib.rs
src/: array.rs  id.rs  lib.rs  net.rs  rt.rs
