[package]
name = "akkad"
version = "0.1.0"
authors = ["Eduardo Leegwater Simões <eduardols@protonmail.com>"]
edition = "2018"

[dependencies]
digest = "0.8.1"
rand = "0.6.5"
generic-array = "0.12.3"
arrayvec = "0.5.1"
serde = "1.0.104"
async-std = "1.5.0"
futures = "0.3.4"

[dev-dependencies]
secp256k1 = { version = "0.17.2", features = ["rand"] }
sha2 = "0.8.1"
